:wrench: Pre fetch banner

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         gtag('config', 'UA-159373076-1');
     </script>
 
+    <link rel="prefetch" href="/img/banner-rain.png">
+
     <style>
         * {
             padding: 0px;
