--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
     <link rel="manifest" href="img/favicon/manifest.json">
+    <meta name="google-site-verification" content="EMqE64ah2UurdKy4PcRrbCaq9qUQyvEUXbWxxhUYuL8" />
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#000000">
